--- a/.gitignore
+++ b/.gitignore
@@ -118,4 +118,6 @@ wp-content/debug.log
 # do version-control the child theme we care about
 # add a line here that looks like this:
 # !/wp-content/themes/example-theme-directory
+!/wp-content/themes/jjie
+!/wp-content/themes/youth-today
 
